Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ RoxygenNote: 7.3.2
 Depends: 
     R (>= 2.10)
 LazyData: true
+URL: https://github.com/angelina1sys/Paqueteprueba
+BugReports: https://github.com/angelina1sys/Paqueteprueba/issues
