--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,9 @@ URL: https://github.com/angelina1sys/Paqueteprueba, https://angelina1sys.github.
 BugReports: https://github.com/angelina1sys/Paqueteprueba/issues
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Imports: 
+    dplyr
+Config/testthat/edition: 3
